# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("screenlock_service_dfx_config") {
  visibility = [ ":*" ]
  include_dirs = [ "include" ]

  cflags_cc = [ "-fexceptions" ]
}

ohos_shared_library("screenlock_server_dfx") {
  sources = [
    "src/screenlock_dump_helper.cpp",
    "src/screenlock_hisysevent_adapter.cpp",
    "src/screenlock_trace.cpp",
  ]

  public_configs = [ ":screenlock_service_dfx_config" ]

  include_dirs = [
    "//base/miscservices/screenlock/service/dfx/include",
    "//base/hiviewdfx/hitrace/interfaces/native/innerkits/include",
    "//base/hiviewdfx/hisysevent/interfaces/native/innerkits/hisysevent/include",
    "//base/miscservices/screenlock/utils/include",
  ]
  deps = [
    "//base/miscservices/screenlock/utils:screenlock_utils",
    "//base/telephony/core_service/interfaces/innerkits:tel_core_service_api",
    "//base/useriam/user_auth_framework/frameworks/user_idm:useridm_framework",
    "//foundation/distributedschedule/safwk/interfaces/innerkits/safwk:system_ability_fwk",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",
    "//foundation/windowmanager/utils:libwmutil",
    "//utils/native/base:utils",
  ]
  external_deps = [
    "bundle_framework:appexecfwk_core",
    "eventhandler:libeventhandler",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "multimedia_image_standard:image_native",
    "os_account:os_account_innerkits",
    "ril_device_driver_interface:hril_innerkits",
    "window_manager:libdm",
    "window_manager:libwm",
  ]
  relative_install_dir = "module"
  subsystem_name = "miscservices"
  part_name = "screenlock"
}
